@@ -1,5 +1,7 @@
 #pragma once
 
+#include <string>
+
 namespace LHAPDF {
 
 
@@ -8,6 +10,7 @@ namespace LHAPDF {
   class Interpolator;
   class Extrapolator;
   class AlphaS;
+  class Info;
 
 
   /// @name Factory functions for making PDFs and other objects
@@ -53,6 +56,15 @@ namespace LHAPDF {
   AlphaS* mkAlphaS(const std::string& name);
 
   //@}
+
+
+  /// Get the singleton global configuration object
+  ///
+  /// @todo Move this to somewhere else -- out of Info? In Factories.h?
+  ///
+  /// The global config is populated by reading from lhapdf.conf if it is
+  /// found in the search paths.
+  Info& config();
 
 
 }
